# seeclickfix-sentiment

./: .gitignore  BACKGROUND.md  Dockerfile  LICENSE  Makefile  README.md  pyproject.toml
config/: deploy.yml
src/: cli.py  config.py  entrypoint.py  pipeline.py
src/crawler/: __init__.py  client.py  http_source.py  source.py
src/extraction/: employees.py
src/models/: __init__.py  database.py  schema.py
src/sentiment/: analyzer.py  llm.py
src/web/: app.py
src/web/routes/: dashboard.py  departments.py  employees.py  issues.py
src/web/templates/: 404.html  base.html  dashboard.html  department_detail.html  departments.html  employee_detail.html  employees.html  issue_detail.html  issues.html
