[project]
name = "seeclickfix-sentiment"
version = "0.1.0"
description = "Sentiment analysis of Jersey City SeeClickFix employee responses"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27",
    "pydantic>=2.0",
    "typer>=0.9",
    "rich>=13.0",
    "vaderSentiment>=3.3",
    "transformers>=4.36",
    "torch>=2.0",
    "fastapi>=0.109",
    "uvicorn>=0.27",
    "jinja2>=3.1",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23"]
claude = ["anthropic>=0.40"]

[project.scripts]
scf = "src.cli:app"
